<resources>
    <string name="app_name" translatable="false">WordPress</string>
    <string name="xmlrpc_error">Couldn\'t connect. Enter the full path to xmlrpc.php on your site and try again.</string>
    <string name="xmlrpc_missing_method_error">Couldn\'t connect. Required XML-RPC methods are missing on the server.</string>
    <string name="xmlrpc_post_blocked_error">Couldn\'t connect. Your host is blocking POST requests, and the app needs
        that in order to communicate with your site. Contact your host to solve this problem.</string>
    <string name="xmlrpc_endpoint_forbidden_error">Couldn\'t connect. We received a 403 error when trying to access your
        site XMLRPC endpoint. The app needs that in order to communicate with your site. Contact your host to solve
        this problem.</string>
    <string name="xmlrpc_malformed_response_error">Couldn\'t connect. The WordPress installation responded with an invalid XML-RPC document.</string>
    <string name="site_timeout_error">Couldn\'t connect to the WordPress site due to Timeout error.</string>
    <string name="no_network_title">No network available</string>
    <string name="no_network_message">There is no network available</string>
    <string name="sign_out_wpcom_confirm">Logging out from your account will remove all of @%s’s WordPress.com data from this device, including local drafts and local changes.</string>
    <string name="account_two_step_auth_enabled">This account has two step authentication enabled. Visit your security settings on WordPress.com and generate an application-specific password.</string>
    <string name="select_categories">Select categories</string>
    <string name="tags_separate_with_commas">Tags (separate tags with commas)</string>
    <string name="post_content">Content (tap to add text and media)</string>
    <string name="max_thumbnail_px_width">Default Image Width</string>
    <string name="image_quality">Image quality</string>
    <string name="password">Password</string>
    <string name="blogs">Blogs</string>
    <string name="account_details">Account details</string>
    <string name="status">Status</string>
    <string name="anonymous">Anonymous</string>
    <string name="device">Device</string>
    <string name="post">Post</string>
    <string name="page">Page</string>
    <string name="posts">Posts</string>
    <string name="media">Media</string>
    <string name="video">Video</string>
    <string name="themes">Themes</string>
    <string name="pages">Pages</string>
    <string name="about_the_app">About the app</string>
    <string name="username">Username</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="keep_editing">Keep editing</string>
    <string name="update_draft">Update draft</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="search">Search</string>
    <string name="show">Show</string>
    <string name="hide">Hide</string>
    <string name="select_all">Select all</string>
    <string name="deselect_all">Deselect all</string>
    <string name="notification_sound">Notification sound</string>
    <string name="notification_vibrate">Vibrate</string>
    <string name="notification_pending_drafts">Notify me on pending drafts</string>
    <string name="notification_blink">Blink notification light</string>
    <string name="sure_to_remove_account">Remove this site from the app?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="error">Error</string>
    <string name="could_not_remove_account">Couldn\'t remove site</string>
    <string name="edit_post">Edit post</string>
    <string name="add_comment">Add comment</string>
    <string name="connection_error">Connection error</string>
    <string name="category_refresh_error">Category refresh error</string>
    <string name="incorrect_credentials">Incorrect username or password.</string>
    <string name="cancel_edit">Cancel edit</string>
    <string name="upload_full_size_image">Upload and link to full image</string>
    <string name="upload_scaled_image">Upload and link to scaled image</string>
    <string name="scaled_image_error">Enter a valid scaled width value</string>
    <string name="scaled_image">Scaled image width</string>
    <string name="immediately">Immediately</string>
    <string name="gallery_error">The media item couldn\'t be retrieved</string>
    <string name="refresh">Refresh</string>
    <string name="blog_not_found">An error occurred when accessing this blog</string>
    <string name="post_not_found">An error occurred when loading the post. Refresh your posts and try again.</string>
    <string name="sign_in">Log in</string>
    <string name="signing_out">Logging out…</string>
    <string name="sign_in_wpcom">Log in to WordPress.com</string>
    <string name="upload">Upload</string>
    <string name="learn_more">Learn more</string>
    <string name="posting_post">Posting \"%s\"</string>
    <string name="language">Language</string>
    <string name="interface_language">Interface Language</string>
    <string name="signout">Log out</string>
    <string name="undo">Undo</string>
    <string name="never">Never</string>
    <string name="unknown">Unknown</string>
    <string name="off">Off</string>
    <string name="could_not_load_page">Could not load page</string>
    <string name="send">Send</string>
    <string name="swipe_for_more">Swipe for more</string>
    <string name="confirm">Confirm</string>
    <string name="no_default_app_available_to_open_link">Unable to open the link</string>
    <string name="retry">Retry</string>
    <string name="button_skip">Skip</string>
    <string name="button_next">Next</string>
    <string name="button_done">Done</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="days_ago">%d days ago</string>
    <string name="media_add_popup_title">Add to media library</string>
    <string name="cab_selected">%d selected</string>
    <string name="all">All</string>
    <string name="images">Images</string>
    <string name="unattached">Unattached</string>
    <string name="media_gallery_column_count_single">1 column</string>
    <string name="media_gallery_column_count_multi">%d columns</string>
    <string name="media_gallery_type">Type</string>
    <string name="media_gallery_type_thumbnail_grid">Thumbnail grid</string>
    <string name="media_gallery_type_squares">Squares</string>
    <string name="media_gallery_type_tiled">Tiled</string>
    <string name="media_gallery_type_circles">Circles</string>
    <string name="media_gallery_type_slideshow">Slideshow</string>
    <string name="media_insert_title">Add multiple photos</string>
    <string name="media_insert_individually">Add individually</string>
    <string name="media_insert_as_gallery">Add as gallery</string>
    <string name="media_saved_to_device">Media saved to this device</string>
    <string name="wp_media_title">WordPress media</string>
    <string name="pick_photo">Select photo</string>
    <string name="pick_video">Select video</string>
    <string name="capture_or_pick_photo">Capture or select photo</string>
    <string name="reader_toast_err_get_post">Unable to retrieve this post</string>
    <string name="media_error_no_permission">You don\'t have permission to view the media library</string>
    <string name="media_error_no_permission_upload">You don\'t have permission to upload media to the site</string>
    <string name="media_error_too_large_upload">The file is too big. Please contact the web hosting provider to fix this issue</string>
    <string name="access_media_permission_required">Permissions required in order to access media</string>
    <string name="add_media_permission_required">Permissions required in order to add media</string>
    <string name="media_fetching">Fetching media…</string>
    <string name="media_file_type">File type: %s</string>
    <string name="media_file_name">File name: %s</string>
    <string name="media_uploaded_on">Uploaded on: %s</string>
    <string name="media_dimensions">Dimensions: %s</string>
    <string name="media_upload_error">Media upload error occurred</string>
    <string name="media_generic_error">Media error occurred</string>
    <string name="media_upload_state_queued">Queued</string>
    <string name="media_upload_state_uploading">Uploading</string>
    <string name="media_upload_state_deleting">Deleting</string>
    <string name="media_upload_state_deleted">Deleted</string>
    <string name="media_upload_state_failed">Failed</string>
    <string name="media_upload_state_uploaded">Uploaded</string>
    <string name="media_encoder_quality_80">Low</string>
    <string name="media_encoder_quality_85">Medium</string>
    <string name="media_encoder_quality_90">High</string>
    <string name="media_encoder_quality_95">Very High</string>
    <string name="media_encoder_quality_100">Maximum</string>
    <string name="image_added">Image added</string>
    <string name="media_edit_title_text">Title</string>
    <string name="media_edit_caption_text">Caption</string>
    <string name="media_edit_description_text">Description</string>
    <string name="media_edit_title_hint">Enter a title here</string>
    <string name="media_edit_caption_hint">Enter a caption here</string>
    <string name="media_edit_description_hint">Enter a description here</string>
    <string name="media_edit_success">Updated</string>
    <string name="media_edit_failure">Failed to update</string>
    <string name="saving">Saving…</string>
    <string name="confirm_discard_changes">Discard unsaved changes?</string>
    <string name="confirm_delete_media">Delete selected item?</string>
    <string name="confirm_delete_multi_media">Delete selected items?</string>
    <string name="wait_until_upload_completes">Wait until upload completes</string>
    <string name="cannot_delete_multi_media_items">Some media can\'t be deleted at this time. Try again later.</string>
    <string name="media_empty_list">No media</string>
    <string name="delete">Delete</string>
    <string name="media_details_label_date_added">Added</string>
    <string name="media_details_label_date_uploaded">Uploaded</string>
    <string name="media_details_label_file_name">File name</string>
    <string name="media_details_label_file_type">File type</string>
    <string name="media_details_copy_url">Copy URL</string>
    <string name="media_details_copy_url_toast">URL copied to clipboard</string>
    <string name="tab_comments" translatable="false">@string/comments</string>
    <string name="themes_live_preview">Live preview</string>
    <string name="themes_details_label">Details</string>
    <string name="themes_features_label">Features</string>
    <string name="themes_fetching">Fetching themes…</string>
    <string name="theme_activate_button">Activate</string>
    <string name="theme_activating_button">Activating</string>
    <string name="theme_fetch_failed">Failed to fetch themes</string>
    <string name="theme_set_failed">Failed to set theme</string>
    <string name="theme_set_success">Successfully set theme!</string>
    <string name="theme_auth_error_title">Failed to fetch themes</string>
    <string name="theme_auth_error_message">Ensure you have the privilege to set themes</string>
    <string name="restart_login">Restart Login</string>
    <string name="login_magic_links_sent_description">Magic link sent illustration</string>
    <string name="login_magic_link_phase_authenticating">Logging in to WordPress.com</string>
    <string name="login_magic_link_phase_account_fetch">Fetching account</string>
    <string name="login_magic_link_phase_account_settings_fetch">Fetching account settings</string>
    <string name="login_magic_link_phase_sites_fetch">Fetching your sites</string>
    <string name="login_description_progress_mark">Login progress mark</string>
</resources>