<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar_login" />

        <ImageView
            android:id="@+id/image"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/toolbar"
            android:layout_marginTop="@dimen/margin_extra_large"
            android:scaleType="centerInside"
            android:contentDescription="@string/login_magic_links_sent_description"
            app:srcCompat="@drawable/login_magic_link_sent_illustration"/>

        <TableLayout
            android:id="@+id/login_checklist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="@dimen/margin_extra_large">

            <TableRow
                android:gravity="center_vertical">

                <RelativeLayout
                    android:layout_width="@dimen/progress_checklist_icon_sz"
                    android:layout_height="@dimen/progress_checklist_icon_sz">

                    <ImageView
                        android:id="@+id/done_auth"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_centerInParent="true"
                        app:srcCompat="@drawable/ic_checkmark_grey_32dp"
                        android:tint="@color/alert_green"
                        android:contentDescription="@string/login_description_progress_mark"
                        android:visibility="invisible"/>

                    <ImageView
                        android:id="@+id/err_auth"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_centerInParent="true"
                        app:srcCompat="@drawable/ic_cross_grey_600_24dp"
                        android:tint="@color/alert_red"
                        android:contentDescription="@string/login_description_progress_mark"
                        android:visibility="invisible"/>

                    <ProgressBar
                        android:id="@+id/progress_bar_auth"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_centerInParent="true"
                        android:visibility="invisible"/>
                </RelativeLayout>

                <TextView
                    style="@style/Base.TextAppearance.AppCompat.Body1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/margin_large"
                    android:text="@string/login_magic_link_phase_authenticating"/>
            </TableRow>

            <TableRow
                android:gravity="center_vertical">

                <RelativeLayout
                    android:layout_width="@dimen/progress_checklist_icon_sz"
                    android:layout_height="@dimen/progress_checklist_icon_sz">

                    <ImageView
                        android:id="@+id/done_acc"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_centerInParent="true"
                        app:srcCompat="@drawable/ic_checkmark_grey_32dp"
                        android:tint="@color/alert_green"
                        android:contentDescription="@string/login_description_progress_mark"
                        android:visibility="invisible"/>

                    <ImageView
                        android:id="@+id/err_acc"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_centerInParent="true"
                        app:srcCompat="@drawable/ic_cross_grey_600_24dp"
                        android:tint="@color/alert_red"
                        android:contentDescription="@string/login_description_progress_mark"
                        android:visibility="invisible"/>

                    <ProgressBar
                        android:id="@+id/progress_bar_acc"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_centerInParent="true"
                        android:visibility="invisible"/>
                </RelativeLayout>

                <TextView
                    style="@style/Base.TextAppearance.AppCompat.Body1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/margin_large"
                    android:text="@string/login_magic_link_phase_account_fetch"/>
            </TableRow>

            <TableRow
                android:gravity="center_vertical">

                <RelativeLayout
                    android:layout_width="@dimen/progress_checklist_icon_sz"
                    android:layout_height="@dimen/progress_checklist_icon_sz">

                    <ImageView
                        android:id="@+id/done_acc_settings"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_centerInParent="true"
                        app:srcCompat="@drawable/ic_checkmark_grey_32dp"
                        android:tint="@color/alert_green"
                        android:contentDescription="@string/login_description_progress_mark"
                        android:visibility="invisible"/>

                    <ImageView
                        android:id="@+id/err_acc_settings"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_centerInParent="true"
                        app:srcCompat="@drawable/ic_cross_grey_600_24dp"
                        android:tint="@color/alert_red"
                        android:contentDescription="@string/login_description_progress_mark"
                        android:visibility="invisible"/>

                    <ProgressBar
                        android:id="@+id/progress_bar_acc_settings"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_centerInParent="true"
                        android:visibility="invisible"/>
                </RelativeLayout>

                <TextView
                    style="@style/Base.TextAppearance.AppCompat.Body1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/margin_large"
                    android:text="@string/login_magic_link_phase_account_settings_fetch"/>
            </TableRow>

            <TableRow
                android:gravity="center_vertical">

                <RelativeLayout
                    android:layout_width="@dimen/progress_checklist_icon_sz"
                    android:layout_height="@dimen/progress_checklist_icon_sz">

                    <ImageView
                        android:id="@+id/done_sites"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_centerInParent="true"
                        app:srcCompat="@drawable/ic_checkmark_grey_32dp"
                        android:tint="@color/alert_green"
                        android:contentDescription="@string/login_description_progress_mark"
                        android:visibility="invisible"/>

                    <ImageView
                        android:id="@+id/err_sites"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_centerInParent="true"
                        app:srcCompat="@drawable/ic_cross_grey_600_24dp"
                        android:tint="@color/alert_red"
                        android:contentDescription="@string/login_description_progress_mark"
                        android:visibility="invisible"/>

                    <ProgressBar
                        android:id="@+id/progress_bar_sites"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_centerInParent="true"
                        android:visibility="invisible"/>
                </RelativeLayout>

                <TextView
                    style="@style/Base.TextAppearance.AppCompat.Body1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/margin_large"
                    android:text="@string/login_magic_link_phase_sites_fetch"/>
            </TableRow>
        </TableLayout>

        <TextView
            android:id="@+id/error_label"
            style="@style/Base.TextAppearance.AppCompat.Body1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/margin_extra_large"
            android:textColor="@color/alert_red"
            android:visibility="gone"
            tools:visibility="visible"
            tools:text="Error message will appear here"/>

        <Button
            android:theme="@style/LoginTheme.Button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:id="@+id/login_restart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/restart_login"
            android:visibility="gone"
            tools:visibility="visible"/>

    </LinearLayout>
</ScrollView>
